# solana-license-program

./: .gitignore  Cargo.toml  README.md  license.test.js  package.json  utils.js
js/: license.test.js  license_utils.js  mintOneToken.js  package.json  theblockchainapi.js  utils.js
js/keys/: devnet_nft_account.pub.txt  license_program.json  licensee.pub.txt  licensor.json  licensor.pub.txt
keys/: license_program.pub.txt  license_test.json  license_test.pub.txt  licensee.json
program/: Cargo.toml
program/src/: error.rs  instruction.rs  processor.rs  state.rs
program/tests/: init_license_account.rs
src/: processor.rs  state.rs
