[package]
name = "solana-license-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
exclude_entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.5"
thiserror = "1.0.25"
borsh = "0.9.0" 
borsh-derive = "0.9.0" 
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.1.0", features = [ "no-entrypoint" ] }
mpl-token-vault = { version = "0.1.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "1.9.5"
solana-program-test = "1.9.5"

[lib]
name = "license"
crate-type = ["cdylib", "lib"]